# Training-ground

./: README.md  tweepy_example.py  tweepy_example.py~
about-dialog/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac
about-dialog/.anjuta/session/: anjuta.session  dock-layout.xml
about-dialog/Debug/: Makefile  config.h  config.status  libtool
about-dialog/Debug/po/: Makefile  Makefile.in  POTFILES
about-dialog/Debug/src/: Makefile  about_dialog
about-dialog/Debug/src/.deps/: main.Po
about-dialog/autom4te.cache/: output.0  output.1  traces.0  traces.1
about-dialog/src/: Makefile.am  Makefile.in  main.c  main.c~
image-viewer/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
image-viewer/.anjuta/session/: anjuta.session  dock-layout.xml
image-viewer/Debug/: Makefile  config.status  libtool
image-viewer/Debug/po/: Makefile  Makefile.in  POTFILES
image-viewer/Debug/src/: Makefile  image_viewer
image-viewer/Debug/src/.deps/: main.Po
image-viewer/autom4te.cache/: output.0  output.1  traces.0  traces.1
image-viewer/src/: Makefile.am  Makefile.in  main.c  main.c~
try_grid/: .anjuta_sym_db.db  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
try_grid/.anjuta/session/: anjuta.session  dock-layout.xml
try_grid/Debug/: Makefile  config.h  config.status  libtool
try_grid/Debug/po/: Makefile  Makefile.in  POTFILES
try_grid/Debug/src/: Makefile  try_grid
try_grid/Debug/src/.deps/: main.Po
try_grid/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
try_grid/src/: Makefile.am  Makefile.in  main.c  main.c~
try_python/: classes.py  classes.py~  hello.py  hello.py~  simple_loop.py  simple_loop.py~  try_elif.py  try_elif.py~  try_modules.py  try_modules.py~
try_python/database/: cookbook.db3  cookbook.py  external.py  external.py~  recipeprint.html
try_python/fcm-part-8/: mCat.py  main.py  main.py~
try_python/fcm-part-9/: Cache.loc  readcache.py
ubuntu-quickly/new-project/: .quickly  new-project.desktop.in  setup.py
ubuntu-quickly/new-project/.bzr/checkout/: dirstate
ubuntu-quickly/new-project/data/ui/: AboutNewProjectDialog.ui  NewProjectWindow.ui  PreferencesNewProjectDialog.ui  about_new_project_dialog.xml  new_project_window.xml  preferences_new_project_dialog.xml
ubuntu-quickly/new-project/new_project/: AboutNewProjectDialog.py  AboutNewProjectDialog.py~  NewProjectWindow.py  NewProjectWindow.py~  PreferencesNewProjectDialog.py  PreferencesNewProjectDialog.py~  __init__.py
ubuntu-quickly/new-project/new_project_lib/: AboutDialog.py  Builder.py  PreferencesDialog.py  Window.py  __init__.py  helpers.py  new_projectconfig.py
ubuntu-quickly/new-project/tests/: test_example.py  test_lint.py
(+3 files in other folders)
